using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Assets.Scripts.Common
{
    public static class Constants
    {
        public const string TagPlayer = "Player";
        public const string TagCreep = "Creep";
        public const string TagShuriken = "Shuriken";

        public const string GoblinTriggerTakeHit = "TakeHit";
        public const string GoblinTriggerAttack = "Attack";
        public const string GoblinTriggerDie = "Die";
    }
}
